Added ambulance waiting list API
